--- a/src/components/Summary.css
+++ b/src/components/Summary.css
@@ -4,7 +4,7 @@
 
 .sidebar {
     width: 250px;
-    background: #2c3e50;
+    background: #427fb7;
     color: #fff;
     padding: 20px;
     height: 100vh;
@@ -48,7 +48,7 @@ nav ul li svg {
 
 .main-content {
     flex: 1;
-    margin-left: 250px; /* Adjust margin to account for the sidebar */
+    /* margin-left: 250px; Adjust margin to account for the sidebar */
     padding: 20px;
 }
 
